--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "zod": "^3.18.0"
   },
   "devDependencies": {
